infra/k8s/posts.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: posts
spec: 
  containers: 
    - name: posts
      image: microservice-posts:0.0.3
