infra/k8s/comments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comments-deploy
spec:   
  replicas: 1
  selector:
    matchLabels: 
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: microservice-comments:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  selector: 
    app: comments  
  ports: 
    - name: comments
      protocol: TCP
      port: 3002
      targetPort: 3002
