infra/k8s/eventbus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-deploy
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
      - name: eventbus
        image: microservice-eventbus:0.0.1

---
apiVersion: v1
kind: Service
metadata: 
  name: eventbus-srv
spec:
  selector:  
    app: eventbus    
  ports:
    - name: eventbus
      protocol: TCP
      port: 3005
      targetPort: 3005
