infra/k8s/moderateevent-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: moderateevent-deploy
spec:   
  replicas: 1
  selector:
    matchLabels: 
      app: moderateevent
  template:
    metadata:
      labels:
        app: moderateevent
    spec:
      containers:
      - name: moderateevent
        image: microservice-moderateevent:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: moderateevent-clusterip-srv
spec:
  selector: 
    app: moderateevent  
  ports: 
    - name: moderateevent
      protocol: TCP
      port: 3004
      targetPort: 3004
