infra/k8s/query-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query-deploy
spec:   
  replicas: 1
  selector:
    matchLabels: 
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: microservice-query:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector: 
    app: query  
  ports: 
    - name: query
      protocol: TCP
      port: 3003
      targetPort: 3003
